# operation_plushie

./: CMakeLists.txt  README.md  package.xml
launch/: .kinect_pc.launch.swp  kinect_pc.launch  operation_plushie.launch  test_shtuff.launch
res/: haarcascade_plushie.xml
scripts/: baxter_setup.sh  kinect_stuff  leviathan_env.sh
src/: .FindBowl.cpp.swp  .Pickup.h.swp  Delivery.cpp  Delivery.h  FaceDetector.cpp  FaceDetector.h  FindBowl.cpp  FindBowl.h  Pickup.cpp  Pickup.h  PositionJoints.cpp  PositionJoints.h  RepositionHand.cpp  RepositionHand.h  delivery_node.cpp  find_bowl_node.cpp  old_RepositionHand.cpp  operation_plushie_node.cpp  pickup_node.cpp  position_joints_node.cpp  reposition_hand_node.cpp
srv/: Deliver.srv  Pickup.srv  PositionJoints.srv  RepositionHand.srv  isComplete.srv
