<?xml version="1.0"?>
<package>
  <name>operation_plushie</name>
  <version>0.0.0</version>
  <description>The operation_plushie package</description>

  <maintainer email="chris@todo.todo">chris</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  </package>
